# FRACTAL

./: CMakeLists.txt  FRACTOL.h  add_params.c  additional.c  button_funk.c  colour.c  image.c  julia.c  main.c  maldebrot.c  paskal.c  print.c  pyfagor.c  pyfagor_time.c  string_funk.c
Fractol/: Makefile  additional.c  button_funk.c  colour.c  fractol.h  image.c  julia.c  key_funk.c  main.c  maldebrot.c  print.c  pyfagor.c
Fractol/libft/: ft_atoi.c  ft_count_w.c  ft_indexof.c  ft_isalnum.c  ft_isalpha.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_memcmp.c  ft_putchar_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strclr.c  ft_strcmp.c  ft_strdup.c  ft_strequ.c  ft_strmap.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnstr.c  ft_tolower.c
libft/: Makefile  author  ft_bzero.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstmap.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_strchr.c  ft_strcpy.c  ft_strdel.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnew.c  ft_strrchr.c  ft_strsplit.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  ft_swap.c  ft_toupper.c  get_next_line.c  get_next_line.h  libft.h
